update Ethan OH

--- a/staff.html
+++ b/staff.html
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                 	<td><b>Office Hours:</b></td>
-                    <td style = "padding-left: 0.5cm">MT, 2-3:30pm</td>
+                    <td style = "padding-left: 0.5cm">T, Th 4 - 5:30 PDT</td>
                 </tr>
             </table>
         </td>
